--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,299 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Style */
+
+html {
+  font-family: "Comic Neue", cursive;
+}
+
+body {
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.form-container {
+  padding: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+label {
+  font-weight: bold;
+}
+
+.form {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  gap: 0.5em;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+#to-do {
+  max-width: 300px;
+}
+
+.date-and-time-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+textarea {
+  resize: none;
+}
+
+.submit-button {
+  width: 60px;
+  box-shadow: 0px 0px 0px -2px rgba(0, 0, 0, 0.5);
+  line-height: 1.25;
+  background: rgb(110, 157, 243);
+  text-decoration: none;
+  color: white;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.submit-button:hover {
+  background: rgba(110, 157, 243, 0.7);
+}
+
+.list-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+/* To do list */
+h2 {
+  font-weight: bold;
+}
+.todo-lists {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.todo-list {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(5px);
+  gap: 0.5em;
+  padding: 10px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.date-and-time-list-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.close-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  width: 25px;
+  height: 25px;
+  transition: 200ms;
+}
+
+.close-button:hover {
+  background-color: rgb(246, 71, 71);
+  color: white;
+}
+
+.edit-button {
+  position: absolute;
+  top: 30px;
+  right: 0;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  transition: 200ms;
+}
+
+.edit-button:hover {
+  background-color: lightblue;
+  color: white;
+}
+
+.check-button {
+  position: absolute;
+  top: 35px;
+  right: 0;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  transform: translateY(100%);
+  padding: 5px;
+}
+
+.check-button:hover {
+  background-color: rgba(0, 255, 64);
+  color: white;
+}
+
+.check-button-active {
+  background-color: rgba(177, 255, 174, 0.89);
+  backdrop-filter: blur(5px);
+}
+
+.todo-done {
+  background-color: rgba(0, 255, 0, 0.3) !important;
+}
+@media only screen and (max-width: 600px) {
+  .date-and-time-container {
+    grid-template-columns: 1fr;
+  }
 }
